# agents-for-impact-c2

./: .dockerignore  API_SERVER_TEST_RESULTS.md  DATASET_GUIDE.md  DEPLOYMENT.md  Dockerfile  MISSION_ALIGNMENT_TEST_RESULTS.md  README.md
agent/: .dockerignore  .env.template  .gitignore  Dockerfile  LOCAL_TESTING.md  README.md  WEBAPP_README.md  app.py  cloudrun_server.py  deploy_cloudrun.sh  docker-compose.yml  health_agent_integration.py  main.py  nginx.conf  pyproject.toml  run_webapp.py  start.sh  test_api_key.sh  test_local.py  test_minimal.py  test_simple.py  upload_csv.py  upload_json.py
agent/api_server/: server.py
agent/data_agent/: main.py
agent/health-agent/: main.py
agent/health_agent/: __init__.py  main.py
agent/insights_agent/: main.py
agent/maps_agent/: __init__.py  main.py
agent/scripts/: start.sh
agent/search_agent/: __init__.py  main.py
health-agent/: package.json
health-agent/src/app/: globals.css  layout.tsx  page.tsx
health-agent/src/app/api/copilotkit/: route.ts
sample/: pyproject.toml
sample/sample-agent/: main.py
