[project]
name = "agent"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-adk>=0.3.1",
    "google-adk>=1.16.0",
    "pandas>=2.3.3",
    "pandas-gbq>=0.29.2",
    "pyarrow>=21.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "api_server",
    "data_agent",
    "health_agent",
    "insights_agent"
]
